<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:layout_editor_absoluteY="81dp">


    <TextView
        android:id="@+id/username_TextEdit"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:hint="@string/username"
        android:padding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/logoGoesHere_View"
        app:layout_constraintTop_toBottomOf="@+id/logoGoesHere_View" />

    <TextView
        android:id="@+id/password_EditText"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:hint="@string/password"
        android:padding="2dp"
        app:layout_constraintEnd_toEndOf="@+id/username_TextEdit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/username_TextEdit"
        app:layout_constraintTop_toBottomOf="@+id/username_TextEdit" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password_EditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password_EditText"
        app:layout_constraintTop_toBottomOf="@+id/password_EditText"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/logoGoesHere_View"
        android:layout_width="wrap_content"
        android:layout_height="256dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>