<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    android:hapticFeedbackEnabled="false"
    tools:layout_editor_absoluteY="25dp">

    <EditText
        android:id="@+id/password_EditText"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:hint="@string/threeDots"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/email_EditText2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/password_TextView"
        app:layout_constraintTop_toBottomOf="@+id/email_EditText2" />

    <EditText
        android:id="@+id/username_EditText2"
        android:layout_width="245dp"
        android:layout_height="23dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="148dp"
        android:background="@android:color/white"
        android:hint="@string/threeDots"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/username_TextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="148dp"
        android:text="@string/username"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email_TextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/email"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_TextView" />

    <TextView
        android:id="@+id/confirmation_Email_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/confirmationEmail"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/email_TextView"
        app:layout_constraintTop_toBottomOf="@+id/email_TextView" />

    <TextView
        android:id="@+id/password_TextView"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/password"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/confirmation_Email_TextView"
        app:layout_constraintTop_toBottomOf="@+id/confirmation_Email_TextView" />

    <EditText
        android:id="@+id/email_EditText"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/white"
        android:hint="@string/threeDots"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/username_EditText2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/username_TextView"
        app:layout_constraintTop_toBottomOf="@+id/username_EditText2" />

    <EditText
        android:id="@+id/email_EditText2"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:hint="@string/threeDots"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/email_EditText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/confirmation_Email_TextView"
        app:layout_constraintTop_toBottomOf="@+id/email_EditText" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.052083332" />


</android.support.constraint.ConstraintLayout>